--- a/M6W5 Assignment.ipynb
+++ b/M6W5 Assignment.ipynb
@@ -26,8 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Analysis\n",
-    "To begin this exploratory analysis, first use `matplotlib` to import libraries and define functions for plotting the data. Depending on the data, not all plots will be made. (Hey, I'm just a kerneling bot, not a Kaggle Competitions Grandmaster!)"
+    "## Exploratory Analysis"
    ]
   },
   {
